styles.css
body {
  margin: 0;
  font-family: 'Source Sans Pro', sans-serif;
  background-color: #fff;
  color: #333;
  text-align: left;
}

/* General in-text links (red)*/
main a,
footer a {
  color: #df1b12;
  text-decoration: none;
  font-weight: bold;
}

main a:hover,
footer a:hover {
  text-decoration: underline;
}

/* Navigation bar links (white) */
.main-header nav a {
  color: white;
  text-decoration: none;
  font-weight: bold;
}

.main-header nav a:hover {
  text-decoration: underline;
}

/* Top red nav bar */
.main-header {
  background-color: #df1b12;
/*   padding: 1.5rem 1.5rem;  */
  display: flex;
  justify-content: center; 
  align-items: center;
  padding: 20px 20px;
}

.main-header a {
  margin-left: 20px;
  margin-right: 20px
}



a {
  color: white;
  text-decoration: none;
  font-weight: 500;
}

a:hover {
  text-decoration: underline;
}

/* Banner background logo header */
.logo-header {
/*   background-color: white;
  padding: 10px 0;
  text-align: left;
  padding-left: 10px;
  height: 500px; */
 
/*   align-items: left; */
/*   justify-content: center; */
  
  background-image: url('crima_banner_with_logo.png'); 
  background-size: cover;
  background-position: top left;
  background-repeat: no-repeat;

  max-width: 100%;
/*   height: 500px;  */
  aspect-ratio: 3 / 1; /* Maintains shape without fixed height */
  display: block;
  
    
  display: flex;
  align-items: flex-start; 
  justify-content: flex-start; 
/*   padding: 20px;  */
}
}

/* White translucent box behind logo */
.logo-box {
  display: inline-block;
  background-color: rgba(255, 255, 255, 0.8); /* semi-transparent white */
  padding: 10px 20px;
  border-radius: 8px;
}

.logo {
  height: 400px;
  max-width: 80%;
  width: auto;             
  object-fit: contain;
}


/* Main layout */
main {
  max-width: 900px;
  margin: 40px auto;
  padding: 0 20px;
}

/* Section titles */
h2 {
  margin-top: 40px;
  color: #df1b12;
}

/* Partner logos */
.partner-logos {
  display: flex;
  gap: 30px;
  align-items: center;
  justify-content: flex-start;
  flex-wrap: wrap;
  margin-top: 20px;
}

.partnerlogo {
  max-width: 100%;
  height: 80px;
  width: auto;             
  object-fit: contain;
/*   max-height: 50%; */
}

.misclogo {
  max-width: 100%;
  height: 150px;
  width: auto;             
  object-fit: contain;
}

/* Footer */
footer {
  text-align: center;
  padding: 20px;
  font-size: 0.9em;
  color: #666;
  margin-top: 60px;
}

